enable params to capture array-bracketed values when casting
close https://rvohealth.atlassian.net/browse/PDTC-7618
